# plato

./: AGENTS.md  ANALYSIS_SUMMARY.txt  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IMPROVEMENTS.md  INTEGRATION_OPPORTUNITIES.md  INTEGRATION_PROGRESS.md  INTEGRATION_QUICK_REFERENCE.md  INTEGRATION_REVIEW_INDEX.md  INTEGRATION_REVIEW_SUMMARY.txt  MODULARIZATION_PLAN.md  PHASE25_COMPLETION_SUMMARY.md  README.md  README_INTEGRATION_REVIEW.md  SUMMARY.md  THEME-AWARE_PLAN.md  build.sh  deny.toml  dist.sh  service.sh
crates/core/: Cargo.toml  build.rs
crates/core/src/: color.rs  context.rs  cover_editor.rs  device.rs  device_tests.rs  geom.rs  gesture.rs  helpers.rs  input.rs  lib.rs  library.rs  metadata.rs  opds.rs  plugin.rs  rtc.rs  sync.rs  theme.rs  update.rs
crates/core/src/battery/: fake.rs  kobo.rs  mod.rs
crates/core/src/dictionary/: dictreader.rs  errors.rs  indexing.rs  indexing_tests.rs  mod.rs  mod_tests.rs
crates/core/src/document/: mod.rs  mupdf_sys.rs  pdf.rs  pdf_manipulator.rs  plugin.rs  progressive_loader.rs
crates/core/src/font/: constants.rs  freetype.rs  freetype_error.rs  freetype_sys.rs  harfbuzz.rs  harfbuzz_sys.rs  md_title.rs  mod.rs  types.rs
crates/core/src/framebuffer/: image.rs  kobo1.rs  kobo2.rs  linuxfb_sys.rs  mod.rs  mxcfb_sys.rs  sunxi_sys.rs  transform.rs
crates/core/src/frontlight/: mod.rs  natural.rs  premixed.rs  standard.rs
crates/core/src/geom/: boundary.rs  constants.rs  enums.rs  helpers.rs  mod.rs  point.rs  rectangle.rs  region.rs  vec2.rs
crates/core/src/i18n/: mod.rs
crates/core/src/lightsensor/: kobo.rs
crates/core/src/metadata/: annotation.rs  constants.rs  extraction.rs  info.rs  mod.rs  query.rs  sorting.rs  types.rs
crates/core/src/settings/: defaults.rs  display.rs  features.rs  interface.rs  library.rs  mod.rs  preset.rs  reading.rs  theme.rs  tools.rs
crates/core/src/view/: battery.rs  button.rs  clock.rs  common.rs  cover_editor.rs  dialog.rs  entries.rs  event_dispatch.rs  events.rs  filler.rs  frontlight.rs  icon.rs  identifiers.rs  image.rs  input_field.rs  intermission.rs  key.rs  keyboard.rs  label.rs  labeled_icon.rs  menu.rs  menu_entry.rs  menu_helpers.rs  mod.rs  named_input.rs  notification.rs  page_label.rs  pdf_manipulator.rs  preset.rs  presets_list.rs  rendering.rs  rounded_button.rs  search_bar.rs  search_replace.rs  settings.rs  (+4 more)
(+445 files in other folders)
