[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "plato-core"
version = "0.9.45"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
bitflags.workspace = true
downcast-rs = "2.0.2"
image = { version = "0.25.0", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tga"] }
lazy_static = "1.5.0"
libc = "0.2.180"
png = "0.18.0"
regex = "1.12.2"
serde.workspace = true
serde_json.workspace = true
titlecase = "3.6.0"
unicode-normalization = "0.1.25"
toml = "0.9.11"
zip = "7.0.0"
kl-hyphenate = "0.7.3"
entities = "1.0.1"
paragraph-breaker = "0.4.4"
xi-unicode = "0.3.0"
septem = "1.1.0"
byteorder = "1.5.0"
flate2 = "1.1.5"
levenshtein = "1.0.5"
nix.workspace = true
indexmap.workspace = true
anyhow.workspace = true
thiserror = "2.0.17"
walkdir = "2.5.0"
globset = "0.4.18"
fxhash = "0.2.1"
rand_core = "0.9.3"
rand_xoshiro = "0.7.0"
percent-encoding = "2.3.2"
chrono = { version = "0.4.42", features = ["serde", "clock"], default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
quick-xml = "0.37.0"
epub_edit = { path = "../epub_edit" }